<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Score!</string>
    <string name="app_name">Score Keeper</string>
    <string name="text_color">blue</string>
    <string name="plus1">+1</string>
    <string name="plus5">+5</string>
    <string name="plus10">+10</string>
    <string name="min1">-1</string>
    <string name="min5">-5</string>
    <string name="min10">-10</string>
    <string name="alert_dialog_text_entry">Set Score</string>
    <string name="alert_dialog_ok">Set</string>
    <string name="alert_dialog_cancel">Cancel</string>
</resources>
