<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dip"
    android:gravity="center"
    >
	<TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:textSize="64sp"
    	android:id="@+id/score"
    	/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">
    <TableLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
    	<TableRow
    		android:layout_height="wrap_content"
    		android:id="@+id/tableRow1"
    		android:layout_width="fill_parent">
    		<Button 
    			android:id="@+id/plus1"
    			android:text="@string/plus1"
    			android:layout_weight="1"/>
    		<Button
    			android:id="@+id/plus5"
    			android:text="@string/plus5"
    			android:layout_weight="1"/>
    		<Button
    			android:id="@+id/plus10"
    			android:text="@string/plus10"
    			android:layout_weight="1"/>
    	</TableRow>
    	<TableRow
    		android:layout_height="wrap_content"
    		android:id="@+id/tableRow2"
    		android:layout_width="fill_parent">
        	<Button
        		android:text="@string/min1"
        		android:id="@+id/min1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_weight="1"/>
        	<Button
        		android:text="@string/min5"
        		android:id="@+id/min5"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_weight="1"/>
        	<Button
        		android:text="@string/min10"
        		android:id="@+id/min10"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_weight="1"/>
    </TableRow>
  </TableLayout>
</LinearLayout>
</LinearLayout>
